added load image (drop)

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -19,6 +19,8 @@
     <script src="js/utils/folders.js"></script>
     <script src="js/utils/plugDbClick.js"></script>
     <script src="js/utils/plugHover.js"></script>
+    <script src="js/utils/pludDragAndDrop.js"></script>
+    <script src="js/utils/plugDraggable.js"></script>
     <!--configs-->
     <script src="js/config/config.js"></script>
     <script src="js/config/dictionary.js"></script>
