--- a/webapp/html/modal/load.html
+++ b/webapp/html/modal/load.html
@@ -38,6 +38,12 @@
             </label>
         </div>
         <div class="ah_row">
+            <label for="loadPictureCategory" class="ah_form-item">
+                <b>Category:</b>
+                <input id="loadPictureCategory" type="text" class="ah_control-text" value="{{data.picture.category}}"/>
+            </label>
+        </div>
+        <div class="ah_row">
             <label for="loadPictureDescription" class="ah_form-item">
                 <b>Description:</b>
                 <textarea id="loadPictureDescription" class="ah_control-textarea">
