--- a/webapp/html/dashboard/people.html
+++ b/webapp/html/dashboard/people.html
@@ -9,8 +9,8 @@
             <p class="ah_city">{{city}}</p>
             <p class="ah_type">{{type}}</p>
             <p class="ah_actions">
-                <a href="javascript:void(0)" class="ah_button">Show gallery</a>
-                <a href="javascript:void(0)" class="ah_button">Show account</a>
+                <a href="#{{id}}/gallery" class="ah_button">Show gallery</a>
+                <a href="#{{id}}" class="ah_button">Show account</a>
             </p>
         </div>
 
