--- a/webapp/index.html
+++ b/webapp/index.html
@@ -24,6 +24,7 @@
     <!--configs-->
     <script src="js/config/config.js"></script>
     <script src="js/config/dictionary.js"></script>
+    <script src="js/config/roles.js"></script>
     <!--models and collections-->
     <script src="js/models/User.js"></script>
     <script src="js/models/Picture.js"></script>
