--- a/webapp/html/dashboard/dashboard.html
+++ b/webapp/html/dashboard/dashboard.html
@@ -1,17 +1,29 @@
 <div class="ah-inner-container">
     <div class="ah_top-dashboard">
-        <h2>ArtHub</h2>
+        <div class="ah_switcher-back-gallery">
+            <div class="ah_item_switcher-back-gallery first">
+                <h2>ArtHub</h2>
+                <img src="images/dashboard/dashboard1.jpg"/>
+            </div>
+            <div class="ah_item_switcher-back-gallery second show">
+                <h2>ArtHub</h2>
+                <img src="images/dashboard/dashboard2.jpg"/>
+            </div>
+            <div class="ah_item_switcher-back-gallery third">
+                <h2>ArtHub</h2>
+                <img src="images/dashboard/dashboard3.jpg"/>
+            </div>
+            <div class="ah_item_switcher-back-gallery fourth">
+                <h2>ArtHub</h2>
+                <img src="images/dashboard/dashboard4.jpg"/>
+            </div>
+            <div class="ah_item_switcher-back-gallery fifth">
+                <h2>ArtHub</h2>
+                <img src="images/dashboard/dashboard5.jpg"/>
+            </div>
+        </div>
     </div>
-    <div class="ah_row ah_row-dashboard">
-        <h3>Photos</h3>
-        {{> pictures}}
-    </div>
-    <div class="ah_row ah_row-dashboard">
-        <h3>Artists</h3>
-        {{> people}}
-    </div>
-    <div class="ah_row ah_row-dashboard">
-        <h3>Articles</h3>
-        {{> articles}}
+    <div class="ah_center-dashboard">
+
     </div>
 </div>
