--- a/webapp/html/account/public/info.html
+++ b/webapp/html/account/public/info.html
@@ -1,3 +1,50 @@
-<div>
-    public info
+<div class="ah_inner-account-home small-12 clearfix">
+    <div class="small-6 columns">
+        <div class="ah_row">
+            <h3>Personal info:</h3>
+            <div class="ah_inner-block">
+                <ul>
+                    <li>
+                        <span class="title">Location:</span>
+                        <span class="value">Russia, Saint-Petersburg</span>
+                    </li>
+                    <li>
+                        <span class="title">Activity:</span>
+                        <span class="value">artist</span>
+                    </li>
+                    <li>
+                        <span class="title">About me:</span>
+                    <span class="value">
+                        description. long long description. very long description.
+                    </span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="small-6 columns">
+        <h3>Links:</h3>
+        <div class="ah_inner-block">
+            <ul>
+                <li>
+                    <span class="title">VK:</span>
+                    <span class="value"><a href="vk.com/id409391" target="_blank">Sergey Sukhanov</a></span>
+                </li>
+                <li>
+                    <span class="title">Skype:</span>
+                    <span class="value"><a href="javascript:void(0)">SergeySukhanov</a></span>
+                </li>
+                <li>
+                    <span class="title">Instagram:</span>
+                    <span class="value"><a href="javascript:void(0)">Sergey</a></span>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="small-12 columns">
+        <h3>Gallery:</h3>
+        <div class="ah_inner-block">
+
+        </div>
+    </div>
 </div>
