--- a/webapp/html/dashboard/dashboard.html
+++ b/webapp/html/dashboard/dashboard.html
@@ -1,29 +1,55 @@
 <div class="ah-inner-container">
-    <div class="ah_top-dashboard">
+    <section class="ah_top-dashboard">
         <div class="ah_switcher-back-gallery">
-            <div class="ah_item_switcher-back-gallery first">
+            <div data-id="1" class="ah_item_switcher-back-gallery first show">
                 <h2>ArtHub</h2>
                 <img src="images/dashboard/dashboard1.jpg"/>
             </div>
-            <div class="ah_item_switcher-back-gallery second show">
+            <div data-id="2" class="ah_item_switcher-back-gallery second">
                 <h2>ArtHub</h2>
                 <img src="images/dashboard/dashboard2.jpg"/>
             </div>
-            <div class="ah_item_switcher-back-gallery third">
+            <div data-id="3" class="ah_item_switcher-back-gallery third">
                 <h2>ArtHub</h2>
                 <img src="images/dashboard/dashboard3.jpg"/>
             </div>
-            <div class="ah_item_switcher-back-gallery fourth">
+            <div data-id="4" class="ah_item_switcher-back-gallery fourth">
                 <h2>ArtHub</h2>
                 <img src="images/dashboard/dashboard4.jpg"/>
             </div>
-            <div class="ah_item_switcher-back-gallery fifth">
+            <div data-id="5" class="ah_item_switcher-back-gallery fifth">
                 <h2>ArtHub</h2>
                 <img src="images/dashboard/dashboard5.jpg"/>
             </div>
         </div>
-    </div>
-    <div class="ah_center-dashboard">
+    </section>
+    <section class="ah_center-dashboard">
+        <nav>
 
-    </div>
+        </nav>
+        <div class="ah_pictures-section">
+            <div class="ah_section ah_section-half small-12 clearfix">
+                <div class="ah_section-item small-6 columns"></div>
+                <div class="ah_section-item small-6 columns"></div>
+            </div>
+            <div class="ah_section ah_section-single small-12 clearfix">
+                <div class="ah_section-item small-12 columns"></div>
+            </div>
+            <div class="ah_section ah_section-triple small-12 clearfix">
+                <div class="ah_section-item small-4 columns"></div>
+                <div class="ah_section-item small-4 columns"></div>
+                <div class="ah_section-item small-4 columns"></div>
+            </div>
+            <div class="ah_section ah_section-multi small-12 clearfix">
+                <div class="ah_section-item"></div>
+                <div class="ah_section-item"></div>
+                <div class="ah_section-item"></div>
+                <div class="ah_section-item"></div>
+                <div class="ah_section-item"></div>
+                <div class="ah_section-item"></div>
+                <div class="ah_section-item"></div>
+                <div class="ah_section-item"></div>
+            </div>
+        </div>
+    </section>
 </div>
