--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Art hub</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--------------------------LIBS------------------------>
     <script src="js/vendor/jquery/dist/jquery.min.js"></script>
     <script src="js/vendor/lodash/dist/lodash.min.js"></script>
