--- a/webapp/index.html
+++ b/webapp/index.html
@@ -22,6 +22,8 @@
     <script src="js/utils/plugHover.js"></script>
     <script src="js/utils/pludDragAndDrop.js"></script>
     <script src="js/utils/plugDraggable.js"></script>
+    <script src="js/utils/easing.js"></script>
+    <script src="js/utils/easing-comp.js"></script>
     <!--configs-->
     <script src="js/config/config.js"></script>
     <script src="js/config/dictionary.js"></script>
